# driggsby

./: .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  README.md  deny.toml  justfile  pyproject.toml  pyrightconfig.json
crates/driggsby-cli/: Cargo.toml
crates/driggsby-cli/src/: cli.rs  dispatch.rs  main.rs  stdout_io.rs
crates/driggsby-cli/src/output/: accounts_shared.rs  accounts_text.rs  demo_text.rs  error_text.rs  format.rs  import_text.rs  intelligence_text.rs  json.rs  mod.rs  mode.rs  schema_text.rs  sql_text.rs
crates/driggsby-cli/tests/: contract_scaffold.rs
crates/driggsby-client/: Cargo.toml
crates/driggsby-client/src/: error.rs  lib.rs  migrations.rs  setup.rs  state.rs
crates/driggsby-client/src/commands/: accounts.rs  anomalies.rs  common.rs  dash.rs  demo.rs  import.rs  intelligence.rs  mod.rs  recurring.rs  schema.rs  sql.rs
crates/driggsby-client/src/contracts/: envelope.rs  mod.rs  types.rs
crates/driggsby-client/src/import/: analysis.rs  dedupe.rs  drift_warnings.rs  input.rs  inventory.rs  mod.rs  parse.rs  persist.rs  sign_profiles.rs  undo.rs  validate.rs
crates/driggsby-client/src/intelligence/: anomalies.rs  date.rs  mod.rs  normalize.rs  policy.rs  query.rs  recurring.rs  refresh.rs  types.rs
crates/driggsby-client/src/migrations/: 0001_bootstrap.sql  0004_internal_dedupe_scope_id.sql  (+4 more)
crates/driggsby-client/tests/: anomalies_synthetic_battery.rs  import_dry_run_analysis.rs  import_flow.rs  intelligence_refresh_command.rs  recurring_command.rs  recurring_synthetic_battery.rs  setup_initialization.rs  sql_command.rs
(+39 files in other folders)
