[project]
name = "driggsby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matt May", email = "matt@goodsoftware.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.0",
]

[project.scripts]
driggsby = "driggsby.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
