[package]
name = "driggsby-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "driggsby"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
driggsby-client = { path = "../driggsby-client" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
