[package]
name = "driggsby-client"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
home = "0.5.12"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rusqlite_migration = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.26.0"
